--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,19 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "pg": "^8.9.0"
-  },
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
-  "description": ""
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "pg": "^8.9.0"
+  }
 }
