--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ DB_USER = postgres
 DB_PASSWORD = postgres
 DB_HOST = localhost
 DB_PORT = 5432
-DB_DATABASE = perntodo
+DB_DATABASE = fullstacktodoapp
